<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:layout_margin="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_1"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp" >

                <RadioButton android:id="@+id/rb1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1"/>
                <RadioButton android:id="@+id/rb1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2"/>
                <RadioButton android:id="@+id/rb1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3"/>
                <RadioButton android:id="@+id/rb1_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/explanation_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q2"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_2"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_2"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <RadioButton android:id="@+id/rb2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_6"/>
                <RadioButton android:id="@+id/rb2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_7"/>
                <RadioButton android:id="@+id/rb2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5"/>
                <RadioButton android:id="@+id/rb2_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_8"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/explanation_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q3"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_3"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView_3"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <RadioButton android:id="@+id/rb3_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_9"/>
                <RadioButton android:id="@+id/rb3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_10"/>
                <RadioButton android:id="@+id/rb3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_11"/>
                <RadioButton android:id="@+id/rb3_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_12"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/explanation_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q4"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_4"
        android:layout_margin="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_4"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/radioGroup4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <RadioButton android:id="@+id/rb4_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_13"/>
                <RadioButton android:id="@+id/rb4_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_14"/>
                <RadioButton android:id="@+id/rb4_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_15"/>
                <RadioButton android:id="@+id/rb4_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_16"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/explanation_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/help"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="help"
            android:text="@string/help"
            android:textStyle="bold" />

        <Button
            android:id="@+id/done"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="done"
            android:text="@string/done"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

</ScrollView>